fix spacing issue in about-me section, added favicon

--- a/Static/styles.css
+++ b/Static/styles.css
@@ -20,7 +20,6 @@ header {
   width: 100%;
   height: 10%;
   margin: 80px 0 0 30px;
-  /* border: 2px solid black; */
 }
 
 header h1 {
@@ -56,7 +55,6 @@ div.container {
   height: 70vh;
   pointer-events: all;
   padding: 20px;
-  /* border: 2px solid black; */
 }
 
 a {
@@ -77,7 +75,6 @@ img#photo {
 .about,
 .projects,
 .contact {
-  /* border: 1px solid red; */
   width: 100%;
   height: 70vh;
   padding: 20px;
@@ -153,7 +150,6 @@ h3 span {
 
 @media only screen and (max-width: 1024px) {
   body {
-    /* background-color: #424141; */
     overflow: scroll;
     overflow-x: hidden;
   }
@@ -165,11 +161,13 @@ h3 span {
 
   div.container {
     display: flex;
-    /* grid-template-rows: 1fr 1fr 1fr; */
     flex-direction: row;
     flex-wrap: wrap;
     height: auto;
-    /* width: 100vh; */
+  }
+
+  .projects {
+    margin-top: 8em;
   }
 
   .projects,
@@ -180,14 +178,6 @@ h3 span {
     justify-content: center;
     padding: 5%;
   }
-
-  /* .about {
-    /* width: 100vw; */
-
-  /* .projects,
-  .contact {
-    margin-bottom: 3%;
-  } */
 
   .goldCorner {
     width: 10%;
@@ -202,7 +192,6 @@ h3 span {
 
   header {
     height: 15vh;
-    /* border: 1px solid red; */
   }
 
   header h1,
@@ -221,7 +210,6 @@ h3 span {
   h3.skills {
     font-size: 0.8em;
     padding: 0 0 0 0;
-    /* border: 1px solid red; */
   }
 
   footer {
@@ -251,6 +239,10 @@ h3 span {
     font-size: 0.5em;
     padding: 0 0 0 10px;
     border: 1px solid red;
+  }
+
+  .projects {
+    margin-top: 10em;
   }
 
   .projects,
